Why Full Circle Insights? - Tablet Size - Learn More Buttons Horizontal Alignment Fixes #31

--- a/css/style.css
+++ b/css/style.css
@@ -498,6 +498,7 @@ section.comments .form-control{margin-bottom: 20px;}
   section.menu-pages li a{padding: 15px 7px;}
   #pricing-page .resume{margin-top: 110px;}
   section.our-camera li{padding: 10px 20px;}
+  section.why-full-circle ul{min-height: 165px}
 
   #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a{padding: 6px 13px!important;}
 }
@@ -521,6 +522,7 @@ section.comments .form-control{margin-bottom: 20px;}
   .learn-more a.btn.btn-primary{font-size: 10px!important;}
   #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a{padding: 5px!important; font-size: 13px!important;}
   section.learn-marketing-data h4{min-height: 120px}
+  section.why-full-circle ul{min-height: 255px}
 }
 @media screen and (max-width: 767px){
   .navbar-toggle{background-color: #ed7624; display: none;}
@@ -550,6 +552,8 @@ section.comments .form-control{margin-bottom: 20px;}
   #mega-menu-wrap-primary #mega-menu-primary > li.mega-menu-item > a{display: block!important;padding: 2px 22px!important;}
   #mega-menu-wrap-primary .mega-schedule > a{margin-left: 0!important ;}
     .btn-primary, .btn-primary:focus, .btn-primary:active{margin-bottom:30px;  }
+    section.learn-marketing-data h4{min-height: inherit}
+  section.why-full-circle ul{min-height: inherit}
 }
 @media screen and (max-width: 480px){
   footer#footer{padding: 20px 0;}
